--- a/light/lighted_cube.html
+++ b/light/lighted_cube.html
@@ -49,7 +49,7 @@
 			return;
 		}
 
-		if (!initShaders(gl, 'fs', 'vs')) {
+		if (!initProgram(gl, 'fs', 'vs',true)) {
 			console.log('Failed to intialize shaders.');
 			return;
 		}
