--- a/matrix/matrix_triangle.html
+++ b/matrix/matrix_triangle.html
@@ -31,7 +31,7 @@
 			return;
 		}
 
-		if (!initShaders(gl, 'fs', 'vs')) {
+		if (!initProgram(gl, 'fs', 'vs',true)) {
 			console.log('Failed to intialize shaders.');
 			return;
 		}
