--- a/advanced/polygon.html
+++ b/advanced/polygon.html
@@ -55,7 +55,7 @@
         vec3 viewDirection = normalize(u_viewPosition-v_position);
         vec3 halfwayDir = normalize(lightDirection + viewDirection);
         float specularWeighting = pow(max(dot(normal, halfwayDir), 0.0), shininess);
-        vec3 specular = specularColor.rgb * specularWeighting * step(cosTheta,0.0);
+        vec3 specular = specularColor.rgb * specularWeighting;
 
 	    // 第二个光源:点光源
 	    vec3 lightDirection2 = normalize(u_lightPosition2 - v_position.xyz);
@@ -68,160 +68,161 @@
         vec3 specularColor2 =vec3(1.0,1.0,1.0);
         vec3 reflectionDirection = reflect(-lightDirection2, normal);
         float specularWeighting2 = pow(max(dot(reflectionDirection, viewDirection), 0.0), shininess2);
-        vec3 specular2 = specularColor2.rgb * specularWeighting2 * step(cosTheta,0.0);
+        vec3 specular2 = specularColor2.rgb * specularWeighting2;
         // 两个光源亮度相加
 		gl_FragColor = vec4(diffuse+diffuse2+ambient+specular+specular2,u_color.a);	
 	}
 </script>
 <script>
-	var	canvas=document.getElementById('canvas'),
-		gl=get3DContext(canvas,true),
-		viewAngleX=0,
-		viewAngleY=0,
-		cViewAngleX=0,
-		cViewAngleY=0,
-		viewLEN=25,
-		LENPERCENT=1,
-	    LIGHT_POS=[100,0,-100],//光源位置1
-	    LIGHT_POS2=[-100,0,100],//光源位置2
-	    Polygons=[],
-	    NUM=150,
-	    CENTER={x:canvas.width/2,y:canvas.height/2},
-		START={};
+var canvas = document.getElementById('canvas'),
+    gl = get3DContext(canvas, true),
+    viewAngleX = 0,
+    viewAngleY = 0,
+    cViewAngleX = 0,
+    cViewAngleY = 0,
+    viewLEN = 25,
+    LENPERCENT = 1,
+    LIGHT_POS = [100, 0, -100], //光源位置1
+    LIGHT_POS2 = [-100, 0, 100], //光源位置2
+    Polygons = [],
+    NUM = 160,
+    CENTER = { x: canvas.width / 2, y: canvas.height / 2 },
+    START = {};
 
-	function main() {
-		if (!gl) {
-			console.log('Failed to get the rendering context for WebGL');
-			return;
-		}
+function main() {
+    if (!gl) {
+        console.log('Failed to get the rendering context for WebGL');
+        return;
+    }
 
-		var program=createProgramInfo(gl,['vs','fs']),
-			sphereInfo=Sphere(50),
-			cubeInfo=Cube(),
-			sphereBuffer=createBufferInfoFromArrays(gl,sphereInfo),
-			cubeBuffer=createBufferInfoFromArrays(gl,cubeInfo);
+    var program = createProgramInfo(gl, ['vs', 'fs']),
+        sphereBuffer = createBufferInfoFromArrays(gl, Sphere(50)),
+        cubeBuffer = createBufferInfoFromArrays(gl, Cube()),
+        cylinderBuffer = createBufferInfoFromArrays(gl, Cylinder(0.5, 2, 40)),
+        coneBuffer = createBufferInfoFromArrays(gl, Cone(0.5, 2, 40)),
+        buffers = [sphereBuffer, cubeBuffer, cylinderBuffer, coneBuffer];
 
-		for(var i=0;i<NUM;i++){
-			Polygons.push({
-				buffer:i%2?sphereBuffer:cubeBuffer,
-      			xRotation: Random(-60,60),
-      			yRotation: Random(-60,60),
-      			xAngle:0,
-      			yAngle:0,
-      			x:Random(-15,15),
-      			y:Random(-15,15),
-      			z:Random(3,20),
-	    		color:Color.rgbToWebgl(Color.hslToRgb(RandomHsl()))
-	    	});
-	    }
+    for (var i = 0; i < NUM; i++) {
+        Polygons.push({
+            xRotation: Random(-60, 60),
+            yRotation: Random(-60, 60),
+            xAngle: 0,
+            yAngle: 0,
+            x: Random(-15, 15),
+            y: Random(-15, 15),
+            z: Random(3, 25),
+            color: Color.rgbToWebgl(Color.hslToRgb(RandomHsl()))
+        });
+    }
 
-	    gl.clearColor(0.1,0.1,0.1,1);
-	    gl.enable(gl.DEPTH_TEST);
-	    gl.viewport(0, 0, canvas.width, canvas.height);//设置绘图区域
+    gl.clearColor(0.1, 0.1, 0.1, 1);
+    gl.enable(gl.DEPTH_TEST);
+    gl.viewport(0, 0, canvas.width, canvas.height); //设置绘图区域
 
-	    gl.useProgram(program.program);
+    gl.useProgram(program.program);
 
-	    var modelMatrix = new Matrix4(),
-	     	normalMatrix = new Matrix4(),
-	     	mvpMatrix = new Matrix4(),
-	     	last = Date.now();
-
-	    
-	    (function animate(){
-	        var now = new Date(),
-	            elapsed = now - last;
-
-	        last = now;
-
-	        var angleX=(viewAngleX+cViewAngleX)%360;
-	            angleY=viewAngleY+cViewAngleY,
-	            len=viewLEN*LENPERCENT;
-	        angleY=angleY>90?90:angleY<10?10:angleY;
-	        len=len>100?100:len<6?6:len;
-
-	        var eyeY=len*Math.sin(angleY*Math.PI/180),
-	            c=len*Math.cos(angleY*Math.PI/180),
-	            eyeX=c*Math.sin(angleX*Math.PI/180),
-	            eyeZ=c*Math.cos(angleX*Math.PI/180);
-	        
-			gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
-
-			setUniforms(program,{
-	            u_lightColor: [1,1,1],
-	            u_lightPosition: LIGHT_POS, 
-	            u_lightPosition2: LIGHT_POS2, 
-	            u_ambientColor:[0.4,0.4,0.4],
-	            u_viewPosition:[eyeX,eyeY,eyeZ]
-	        });
-
-	        Polygons.forEach((polygon,i)=>{
-	        	polygon.xAngle+=polygon.xRotation * elapsed / 1000;
-	        	polygon.yAngle+=polygon.yRotation * elapsed / 1000;
-	        	polygon.xAngle%=360;
-	        	polygon.yAngle%=360;
-
-	        	// 模型矩阵
-	        	modelMatrix.setRotate(polygon.xAngle, 1, 0, 0);
-	        	modelMatrix.rotate(polygon.yAngle, 0, 1, 0);
-	        	modelMatrix.translate(0,0,polygon.z);
-	        	// modelMatrix.translate(polygon.x,polygon.y,polygon.z);
-
-	        	// 每次重置mvp矩阵
-		        mvpMatrix.setPerspective(45, canvas.width / canvas.height, 1.0, 200.0);
-		        mvpMatrix.lookAt(eyeX,eyeY,eyeZ, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0);
-				mvpMatrix.multiply(modelMatrix);
-
-				// 逆转置矩阵
-	        	normalMatrix.setInverseOf(modelMatrix);
-	        	normalMatrix.transpose();
-	        	setBuffersAndAttributes(gl,program,polygon.buffer);
-		        setUniforms(program,{
-		        	u_color:polygon.color,
-		            u_modelMatrix: modelMatrix.elements,
-		            u_normalMatrix: normalMatrix.elements,
-		            u_mvpMatrix: mvpMatrix.elements
-		        });
-
-	        	gl.drawElements(gl.TRIANGLES, polygon.buffer.numElements, polygon.buffer.indexType, 0);
-	    	});
-
-	        requestAnimationFrame(animate);
-	    }());
-   	}
+    var modelMatrix = new Matrix4(),
+        normalMatrix = new Matrix4(),
+        mvpMatrix = new Matrix4(),
+        last = Date.now();
 
 
-	document.addEventListener('mousedown',function(e){
-	    START = WindowToCanvas(canvas,e.clientX,e.clientY);
-	    document.addEventListener('mousemove',mouseMove,false);
-	    document.addEventListener('mouseup',mouseUp,false);
-	},false);
+    (function animate() {
+        var now = new Date(),
+            elapsed = now - last;
 
-	function mouseMove(e){
-	    var end = WindowToCanvas(canvas,e.clientX,e.clientY),
-	        a=Math.sqrt(Math.pow(START.x-CENTER.x,2)+Math.pow(START.y-CENTER.y,2)),
-	        b=Math.sqrt(Math.pow(end.x-CENTER.x,2)+Math.pow(end.y-CENTER.y,2)),
-	        radX=(START.x-end.x) * 0.01,
-	        radY=(end.y-START.y)*0.01;
+        last = now;
 
-	    cViewAngleX=radX*180/Math.PI;
-	    cViewAngleY=radY*180/Math.PI;
-	    cViewAngleY>90?90:cViewAngleY<-90?-90:cViewAngleY;
-	    LENPERCENT=b/a;
-	}
+        var angleX = (viewAngleX + cViewAngleX) % 360;
+        angleY = viewAngleY + cViewAngleY,
+            len = viewLEN * LENPERCENT;
+        angleY = angleY > 90 ? 90 : angleY < 10 ? 10 : angleY;
+        len = len > 100 ? 100 : len < 6 ? 6 : len;
 
-	function mouseUp(e){
-	    viewAngleX+=cViewAngleX;
-	    cViewAngleX=0;
-	    viewAngleY+=cViewAngleY;
-	    cViewAngleY=0;
-	    viewLEN*=LENPERCENT;
-	    LENPERCENT=1;
-	    document.removeEventListener('mouseup',arguments.callee,false);
-	    document.removeEventListener('mousemove',mouseMove,false);
-	}
+        var eyeY = len * Math.sin(angleY * Math.PI / 180),
+            c = len * Math.cos(angleY * Math.PI / 180),
+            eyeX = c * Math.sin(angleX * Math.PI / 180),
+            eyeZ = c * Math.cos(angleX * Math.PI / 180);
 
-	main();
+        gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
 
+        setUniforms(program, {
+            u_lightColor: [1, 1, 1],
+            u_lightPosition: LIGHT_POS,
+            u_lightPosition2: LIGHT_POS2,
+            u_ambientColor: [0.4, 0.4, 0.4],
+            u_viewPosition: [eyeX, eyeY, eyeZ]
+        });
+
+        var buffer;
+        Polygons.forEach((polygon, i) => {
+            polygon.xAngle += polygon.xRotation * elapsed / 1000;
+            polygon.yAngle += polygon.yRotation * elapsed / 1000;
+            polygon.xAngle %= 360;
+            polygon.yAngle %= 360;
+
+            // 模型矩阵
+            modelMatrix.setRotate(polygon.xAngle, 1, 0, 0);
+            modelMatrix.rotate(polygon.yAngle, 0, 1, 0);
+            modelMatrix.translate(0, 0, polygon.z);
+            // modelMatrix.translate(polygon.x,polygon.y,polygon.z);
+
+            // 每次重置mvp矩阵
+            mvpMatrix.setPerspective(45, canvas.width / canvas.height, 1.0, 200.0);
+            mvpMatrix.lookAt(eyeX, eyeY, eyeZ, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0);
+            mvpMatrix.multiply(modelMatrix);
+
+            // 逆转置矩阵
+            normalMatrix.setInverseOf(modelMatrix);
+            normalMatrix.transpose();
+            buffer = buffers[i % buffers.length];
+            setBuffersAndAttributes(gl, program, buffer);
+            setUniforms(program, {
+                u_color: polygon.color,
+                u_modelMatrix: modelMatrix.elements,
+                u_normalMatrix: normalMatrix.elements,
+                u_mvpMatrix: mvpMatrix.elements
+            });
+
+            gl.drawElements(gl.TRIANGLES, buffer.numElements, buffer.indexType, 0);
+        });
+
+        requestAnimationFrame(animate);
+    }());
+}
+
+
+canvas.addEventListener('mousedown', function(e) {
+    START = WindowToCanvas(canvas, e.clientX, e.clientY);
+    canvas.addEventListener('mousemove', mouseMove, false);
+    canvas.addEventListener('mouseup', mouseUp, false);
+}, false);
+
+function mouseMove(e) {
+    var end = WindowToCanvas(canvas, e.clientX, e.clientY),
+        a = Math.sqrt(Math.pow(START.x - CENTER.x, 2) + Math.pow(START.y - CENTER.y, 2)),
+        b = Math.sqrt(Math.pow(end.x - CENTER.x, 2) + Math.pow(end.y - CENTER.y, 2)),
+        radX = (START.x - end.x) * 0.01,
+        radY = (end.y - START.y) * 0.01;
+
+    cViewAngleX = radX * 180 / Math.PI;
+    cViewAngleY = radY * 180 / Math.PI;
+    cViewAngleY > 90 ? 90 : cViewAngleY < -90 ? -90 : cViewAngleY;
+    LENPERCENT = b / a;
+}
+
+function mouseUp(e) {
+    viewAngleX += cViewAngleX;
+    cViewAngleX = 0;
+    viewAngleY += cViewAngleY;
+    cViewAngleY = 0;
+    viewLEN *= LENPERCENT;
+    LENPERCENT = 1;
+    canvas.removeEventListener('mouseup', arguments.callee, false);
+    canvas.removeEventListener('mousemove', mouseMove, false);
+}
+
+main();
 </script>
 </body>
 </html>
