--- a/advanced/spot_light.html
+++ b/advanced/spot_light.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>点光源阴影/聚光灯动画</title>
+<title>点光源聚光灯阴影</title>
 <style>
     body{margin: 0;}
 </style>
