--- a/advanced/spot_light.html
+++ b/advanced/spot_light.html
@@ -363,9 +363,9 @@ function mouseUp(e) {
     LENPERCENT = 1;
     canvas.removeEventListener('mouseup', arguments.callee, false);
     canvas.removeEventListener('mousemove', mouseMove, false);
+    canvas.removeEventListener('mouseout', mouseUp, false);
 }
 main();
 </script>
 </body>
-
 </html>
