--- a/advanced/fog.html
+++ b/advanced/fog.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <canvas id="canvas" width="400" height="400"></canvas>
-<script src="../js/webgl-util.js"></script>
-<script src="../js/matrix.js"></script>
-<script src="../js/util.js"></script>
+<script src="../../graphics/webgl-util.js"></script>
+<script src="../../graphics/matrix.js"></script>
+<script src="../../graphics/util.js"></script>
 <script type="x-shader/x-vertex" id="vs">
   attribute vec4 a_position;
   attribute vec4 a_color;
