--- a/advanced/shadow_demo.html
+++ b/advanced/shadow_demo.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 <canvas id="canvas" width="600" height="450"></canvas>
-<script src="../js/webgl-util.js"></script>
-<script src="../js/util.js"></script>
-<script src="../js/matrix.js"></script>
-<script src="../js/polygon.js"></script>
+<script src="../../graphics/webgl-util.js"></script>
+<script src="../../graphics/matrix.js"></script>
+<script src="../../graphics/util.js"></script>
+<script src="../../graphics/polygon.js"></script>
 <script type="x-shader/x-vertex" id="svs">
     attribute vec4 a_position; 
     uniform mat4 u_mvpMatrix; 
