--- a/advanced/shadow.html
+++ b/advanced/shadow.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <canvas id="canvas" width="400" height="400"></canvas>
-<script src="../js/webgl-util.js"></script>
-<script src="../js/matrix.js"></script>
+<script src="../../graphics/webgl-util.js"></script>
+<script src="../../graphics/matrix.js"></script>
 <script type="x-shader/x-vertex" id="svs">
     attribute vec4 a_position; 
     uniform mat4 u_MvpMatrix; 
