--- a/3D/animate_cube.html
+++ b/3D/animate_cube.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <canvas id="canvas" width="400" height="400"></canvas>
-<script src="../js/webgl.js"></script>
-<script src="../js/matrix.js"></script>
+<script src="../../graphics/webgl-util.js"></script>
+<script src="../../graphics/matrix.js"></script>
 <script type="x-shader/x-vertex" id="vs">
 	attribute vec4 a_Position; //限定符，类型(4个浮点数的矢量)，变量名称：顶点，attribute变量传输与顶点有关的数据，表示逐顶点的信息(顶点依次传递给它的意思) 
 	// attribute float a_PositionSize;
